base/ellepress/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: ellepress
  # annotations:
    # external-dns.alpha.kubernetes.io/hostname: ellepress.net
spec:
  # type: NodePort
  type: LoadBalancer
  selector:
    base: ellepress
  ports:
  - name: fpm
    port: 9000
    targetPort: 9000
  - name: develop
    port: 8000
    targetPort: 8000
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 80
